Convert to Maven project
- Add CXP Nexus distribution